# test-upstream1

./: README.md
files/: bombastic.json  file1.json  file2.json  file3.json  test.json
files/blah/: task.json  yay.json
files/blah/boo/: koo.json
thrift/: BUILD.bazel  _namespaces.thrift  channel.thrift  channel_membership.thrift  message.thrift  organization.thrift  team.thrift  team_membership.thrift  user.thrift
